refactor: Just fucking full send im tired